Fixing text selection handles getting appeared before finger release

Alpha value for selection handle is not reset correctly during
clearing of selection. This is making touch handle showing for
a small duration. Clearing the visibility state of handles during
selection clear, so that it will automatically set the alpha value
to 0 during fade animation.

Bug: 741682
Change-Id: I40d31e705637680bbe1cddaa9f857b7f4cca2324
Reviewed-on: https://chromium-review.googlesource.com/571210
Commit-Queue: AJITH KUMAR V <ajith.v@samsung.com>
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489041}