ui/touch_selection/touch_handle.cc
@@ -96,6 +96,7 @@ void TouchHandle::SetEnabled(bool enabled) {
   if (enabled_ == enabled)
     return;
   if (!enabled) {
+    SetVisible(false, ANIMATION_NONE);
     EndDrag();
     EndFade();
   }
