ui/touch_selection/touch_selection_controller_test_api.h
@@ -21,6 +21,8 @@ class TouchSelectionControllerTestApi {
 
   bool GetStartVisible() const;
   bool GetEndVisible() const;
+  float GetStartAlpha() const;
+  float GetEndAlpha() const;
   TouchHandleOrientation GetStartHandleOrientation() const;
   TouchHandleOrientation GetEndHandleOrientation() const;
 
